# rock_paper_scissors

./: .gitignore  CMakeLists.txt  build_project.sh
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: google_benchmark.cmake
lib/: CMakeLists.txt
lib/include/: console_input_provider.h  game_lib.h  input_provider.h  input_provider_iface.h  random_input_provider.h
lib/src/: console_input_provider.cpp  game_lib.cpp  input_provider.cpp  prs_lib.cpp  random_input_provider.cpp
test/: CMakeLists.txt
test/src/: game_test.cpp  input_provider_mock.h
